# web-middleware

./: .dockerignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  insomnia_collection.json
src/proto/: download-api.rs
src/server/: download_thread.rs  main.rs  timer_thread.rs
src/server/args/: arguments.rs  mod.rs
src/server/db/: client.rs  config_entry.rs  db_connection.rs  download_entry.rs  entry.rs  mod.rs  postgres_constants.rs
src/server/download/: api.rs
src/server/errors/: error.rs
src/server/logs/: mod.rs  setup_logger.rs
src/server/routes/: api.rs  mod.rs
src/server/routes/configs/: get.rs  mod.rs  patch.rs
src/server/routes/downloads/: delete.rs  get.rs  get_downloads.rs  mod.rs  patch.rs  post.rs  post_download.rs  start.rs
src/server/routes/index/: get.rs  get_index.rs  mod.rs
src/server/state/: app_state.rs
