[package]
name = "web-middleware"
version = "0.1.0"
edition = "2018"
authors = ["Bassem Girgis <bgirgis@pm.me>"]

[[bin]]
name = "server"
path = "src/server/main.rs"

[features]
default = ["with-postgres"]

# sql
with-postgres = ["sqlx", "sqlx/postgres", "sqlx/uuid", "sqlx/json"]
#with-mysql = ["sqlx", "sqlx/mysql"]
#with-mssql = ["sqlx", "sqlx/mssql"]
#with-sqlite = ["sqlx", "sqlx/sqlite"]

#with-all-sql = [
#  "with-postgres",
#  "with-mysql",
#  #"with-mssql",
#  "with-sqlite",
#]

[dependencies]
# logging
log = { version = "^0.4", features = [
  "max_level_debug",
  "release_max_level_info",
] }
fern = "^0.5"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

# structopt
structopt = { version = "0.3", features = ["paw"] }

# actix
actix-web = "4.0.0-beta.9"
actix-rt = "2"

# grpc minimum
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
  "net",
] }

# sqlx
sqlx = { version = "0.5.6", features = [
  # tokio + rustls
  "runtime-tokio-rustls",
  # misc
  "macros",
  "chrono",
  "tls",
], optional = true }

# other
chrono = "^0.4"
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.5"
